# mcf

./: .Xmodmap  .bash_profile  .bashrc  .git-commit-spec  .gitattributes  .gitconfig  .gitignore  .gitmodules  .inputrc  .kebrum  .mailcap  .mime.types  .netrc  .pam_environment  .profile  .secrets  .tmux.conf  .vimrc  .xinitrc  bootstrap.py  install.bash  mimeapps.list  xkb
.dircolors/: dircolors.one-dark
.fonts/: .gitignore  nix-fonts
.vim/: plugins.vim
.vim/after/: plugin
.vim/colors/: mcf.vim
.vim/ftdetect/: asciidoc_filetype.vim  glsl_filetype.vim  gtest_filetype.vim
.vim/ftplugin/: asciidoc.vim  cmake.vim  cpp.vim  cuda.vim  gitcommit.vim  gitrebase.vim  haskell.vim  markdown.vim  python.vim  qf.vim  roslaunch.vim  rst.vim  sh.vim  snippets.vim  tex.vim  xml.vim
.vim/plugin/: enable-alt.vim  keymaps.vim  mcf-append-semicolon.vim  mcf-append.vim  mcf-auto-get-doc.vim  mcf-auto-highlight-toggle.vim  mcf-gnome.vim  mcf-make-target.vim  mcf-paste-from-clipboard.vim  mcf-persistent-undo.vim
.vim/settings/: NERDcommenter.vim  clang_complete.vim  ctrlp.vim  delimitmate.vim  indent-guides.vim  ipython.vim  jedi.vim  nerdtree.vim  numbertoggle.vim  syntastic.vim  tagbar.vim  yankring.vim
.vim/snippet/: all.snippets  c.snippets  cmake.snippets  cpp.snippets  eigen.snippets  fmt.snippets  glm.snippets  javascript.snippets  markdown.snippets  opencv.snippets  pcl.snippets  python.snippets  pytorch.snippets  roscpp.snippets  roslaunch.snippets  rospy.snippets  rst.snippets  rttr.snippets  sh.snippets  snippets.snippets  tex.snippets  vim.snippets  vtk.snippets
.vim/snippets/: c.snippets  cmake.snippets  cpp.snippets  pcl.snippets  python.snippets  ros.snippets  roscfg.snippets  roscpp.snippets  roslaunch.snippets  rosmanifest.snippets  rospy.snippets  snippets.snippets  tex.snippets  vim.snippets
.vim/spell/: en.utf-8.add
.xmonad/: .gitignore  aeolus_segment.sh  conkyrc  conkyrc-desktop  conkyrc-desktop2  conkyrc-top-right  gmail.py  gmail.sh  keyboard.sh  keyboard_segment.sh  layout.sh  network.sh  online.sh  panel.bash  polybar.bash  polybarrc  rhythmbox.sh  solarized.bash  spawn_polybar.sh  status-bar-launcher.sh  toggl.sh  volume.sh  xfm.py  xmobar.bash  xmobarrc  xmonad.desktop  xmonad.hs  xmonad.session
.xmonad/icons/: ac.xbm  battery_full.xbm  boxleft.xbm  code.xbm  full.xbm  grid.xpm  mute.xbm  net_wired.xbm  toggl.xbm  volume.xbm  wifi.xbm
.xmonad/lib/: Solarized.hs
apps/bam/: pyproject.toml
apps/bam/src/bam/: audio.py  bluetooth.py  cli.py  core.py  logging.py  pulseaudio.py  utils.py
apps/ccu/: pyproject.toml
apps/ccu/docs/plans/: 2025-11-18-config-management-design.md
apps/ccu/src/ccu/: cli.py  languages.py  logging.py  plugins.py  project.py
apps/ccu/src/ccu/hooks/: __init__.py  check_mypy.py  fix_ruff.py  format_ruff.py
apps/nvim-manager/: CLAUDE.md  justfile  pyproject.toml
apps/nvim-manager/.claude/: CLAUDE.md  settings.json
apps/nvim-manager/.claude/hooks/: __init__.py  hook_utils.py  mypy_check.py  ruff_check.py
apps/nvim-manager/src/nvim_manager/: __init__.py  cli.py  config.py  editor_manager.py  github.py  lock_repository.py  logging.py  neovim_builder.py  plugin_manager.py  tools_manager.py  utils.py
apps/nvim-manager/src/nvim_manager/lua/: mason_tools.lua
apps/nvim-manager/tests/: __init__.py  test_editor_manager.py  test_lock_repository.py  test_neovim_builder.py
apps/suggest/: pyproject.toml
apps/suggest/src/suggest/: __init__.py  cli.py  llm_client.py  logging.py  mock_llm_client.py  user_interface.py  utilities.py
apps/suggest/src/suggest/prompts/: explain_command.jinja  generate_command.jinja  revise_command.jinja
apps/synctank/: .gitignore  justfile  pyproject.toml
apps/synctank/.claude/: CLAUDE.md
apps/synctank/src/synctank/: lint.py  logging.py  main.py  migrate.py  notes.py  rendering.py  schema.py  search.py  workspace.py
apps/synctank/tests/: conftest.py  test_lint.py  test_logging.py  test_main.py  test_migrate.py  test_notes.py  test_rendering.py  test_schema.py  test_search.py  test_workspace.py
bash/: 010-archives.bash  010-misc-functions.bash  011-env-functions.bash  020-kebrum.bash  020-music-sync.bash  020-stow.bash  020-touchpad.bash  040-aliases.bash  050-misc-config.bash  060-virtualenv.bash  090-powerline-shell.bash  091-z.bash  10-functions.bash  10-strings.bash  11-completion.bash  11-path.bash  155-function.bash  155-misc.bash  155-network.bash  155-text.bash  165-env.bash  20-bash.bash  20-dircolors.bash  255-general.bash  265-clang-as-default-compiler.bash  265-gcc-as-default-compiler.bash  274-pyenv.bash  275-virtualenv.bash  355-general.bash  365-package-managers.bash  40-boleh.bash  40-code.bash  40-cxx.bash  40-gdb.bash  40-stow.bash  41-pack.bash  41-unpack.bash  42-decrypt.bash  42-encrypt.bash  455-man.bash  (+45 more)
bash/global/: 10-functions.bash  10-strings.bash  11-completion.bash  11-path.bash  155-function.bash  155-misc.bash  155-network.bash  155-text.bash  165-env.bash  20-bash.bash  20-dircolors.bash  255-general.bash  265-clang-as-default-compiler.bash  274-pyenv.bash  275-nvm.bash  275-virtualenv.bash  355-general.bash  365-package-managers.bash  40-boleh.bash  (+49 more)
fish/: config.fish
misc/: .ycm_extra_conf.py  secrets  vimium-options  vimium-options.md
mpm/: OPTIONAL  bootstrap.py  install.py
scripts/: install-mcf.py  ros-create-dotfiles.py
ssh/: alpaca  docker-skype  docker-skype.md5  dvt1-19  dvt1-20  dvt10-8  dvt12  dvt2-12  dvt4-39  dvt4-4  dvt4-6  dvt6-2  dvt8-33  evt1-7  evt1-777  evt1-9  evt2-1  evt2-2  evt2-9  mcf.conf  pointclouds  pointclouds.md5  pvt1-2  pvt1-30  r2.5  racer  racer.md5  rack  rgit  rgit.md5  sloth  v4r  v4r.md5  z3c  z3c.md5
templates/cookiecutter-app/{{cookiecutter.project_slug}}/: .gitignore  justfile  pyproject.toml
templates/cookiecutter-app/{{cookiecutter.project_slug}}/.claude/: CLAUDE.md  settings.json
templates/cookiecutter-app/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: logging.py  main.py
templates/cookiecutter-app/{{cookiecutter.project_slug}}/tests/: conftest.py  test_logging.py  test_main.py
(+107 files in other folders)
