[project]
name = "bam"
version = "0.1.0"
description = "Bluetooth Audio Manager"
authors = [{ name = "Sergey Alexandrov", email = "alexandrov88@gmail.com" }]
requires-python = "~=3.11"
dependencies = [
  "click>=8.1.8,<9",
  "pyyaml>=6.0.2,<7",
  "rich>=13.9.4,<14",
  "colorama>=0.4.6,<0.5",
]

[project.scripts]
bam = "bam.cli:cli"

[dependency-groups]
dev = ["mypy>=1.14.1,<2", "types-pyyaml>=6.0.12.20241230,<7"]

[tool.hatch.build.targets.sdist]
include = ["src/bam"]

[tool.hatch.build.targets.wheel]
include = ["src/bam"]

[tool.hatch.build.targets.wheel.sources]
"src/bam" = "bam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "systemd.*"
ignore_missing_imports = true
